Fix misalignment of play field due to Chrome fixing bug: https://chromium.googlesource.com/chromium/src/+/9a18838c49877c1e7d4a6e79107cfc010ef687fa

--- a/akc/css/game.css
+++ b/akc/css/game.css
@@ -119,6 +119,10 @@ body.attract #attract, body.waiting #playing, body.playing #playing, body.game-o
   opacity: 0.65;
 }
 
+#time-remaining {
+  width: 100%;
+}
+
 #grind, #grind-ratio {
   display: none;
 }
